--- a/src/css/list.scss
+++ b/src/css/list.scss
@@ -1,5 +1,5 @@
 .list {
-  max-width: 650px;
+  max-width: 800px;
   margin: auto;
   padding: 0 10px 50px 10px;
 }
@@ -10,6 +10,7 @@
   height: 50px;
   line-height: 50px;
   border-bottom: 1px solid #e5e5e5;
+  font-size: 22px
 }
 
 .list-post {
