--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3,8 +3,10 @@ html,
 body {
   height: 100%;
   font-size: 14px;
-  -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: transparent;
+  margin:0;
+  padding:0;
+  position:relative;
+  background-color: #f8f8f8;
 }
 
 a {
@@ -16,54 +18,6 @@ a:hover {
   color: #fff;
   background: #44a340;
   text-decoration: none;
-}
-
-#logo {
-  padding: 25px 50px;
-}
-
-#logo a {
-  text-decoration: none;
-}
-
-#home {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  margin: -99px 0 0 -150px;
-  width: 300px;
-  text-align: center;
-}
-
-#home h1 {
-  margin: 20px 0;
-  color: #555;
-  font-size: 16px;
-}
-
-#home a {
-  margin: 0 10px;
-  font-size: 14px;
-}
-
-.avatar {
-  margin: 0 auto;
-  width: 120px;
-  height: 120px;
-  background: url("../img/avatar.png") no-repeat;
-  background: -webkit-image-set(
-    url("../img/avatar.png") 1x,
-    url("../img/avatar@2x.png") 2x
-  );
-  border-radius: 50%;
-}
-
-#home .avatar a {
-  display: block;
-  margin: 0;
-  width: 100%;
-  height: 100%;
-  background: none;
 }
 
 @media screen and (max-width: 736px) {
@@ -78,3 +32,30 @@ a:hover {
     background: none;
   }
 }
+
+.footer {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 80px;
+    font-size: 14px;
+    color: #999;
+}
+
+.footer-inner {
+    width: auto;
+    text-align: center;
+    box-sizing: border-box;
+    margin: 20px auto;
+}
+
+.gitmail{
+    display:inline;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.copyright{
+    margin-bottom: 10px;
+}
+
